BugFix -  2.3.0 - Bug Fix * The line selecting was hacing extra margin if more than a single line was selected.

--- a/index.less
+++ b/index.less
@@ -16,13 +16,13 @@ atom-text-editor, :host {
     background-color: #0F0F0F;
   }
 
+
+
   .line.cursor-line
   {
+    box-sizing:border-box;
     background-color: #0F0F0F;
-    border-color: #282828;
-    border-width: 3px 0 3px 0;
-    border-style: solid;
-    margin: -3px 0 -3px 0;
+    box-shadow: inset 0 0 0 2px #282828;
   }
 
   .line-number{
